fix responsiveness of dashboard overlap with mlh logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2201,3 +2201,6 @@ section {
 .mlh {
   margin-right: 7%;
 }
+.mlh-button {
+  margin-right: 80px;
+}
